<resources>
    <string name="app_name">EnseñarteLSA</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="bvn2">Esta aplicacion te ayudara a aprender los conceptos basicos del lenguaje de señas argentina.</string>
    <string name="TxtNombre">Nombre</string>
    <string name="TxtApellido">Apellido</string>
    <string name="TxtKey">Contraseñia</string>
    <string name="TxtConfirmKey">Confirmar contraseña</string>
    <string name="btnregistrarse">Registrarse</string>
    <string name="TxtEmail">Email</string>
    <string name="btnbnv">Continuar</string>
    <string name="lblreg1">¿Ya tiene una cuenta?</string>
    <string name="lbllog1">¿Aun no estas registrado?</string>
    <string name="btnIniciarsession">Iniciar sesion</string>
    <string name="lblreg2">Registrese por favor</string>
    <string name="descimguserlogin">user</string>



</resources>