<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="759dp"
        android:layout_height="1023dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/btnregistrarse"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backregistrarse" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:autofillHints="Ingrese su nombre"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Ingrese su correo electronico"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Ingrese su apellido"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtApellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtKey"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints="Confirme su contrasenia"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtKey"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtConfirmKey"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="Ingrese su contraseña"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtConfirmKey"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKey" />

    <Button
        android:id="@+id/btniniciarsession"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_dos"
        android:ems="10"
        android:onClick="RedirecLogin"
        android:text="@string/btnregistrarse"
        android:textColor="@drawable/txt_btn_dos"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmKey" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblreg1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btniniciarsession" />

    <Button
        android:id="@+id/btnRegistrarse"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:onClick="RedirecLogin"
        android:text="@string/btnIniciarsession"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btniniciarsession" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="143dp"
        android:layout_height="99dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/btnregistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lblreg2"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>